Fix the z-index to make the modal on top of all layers

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,7 +17,7 @@
 }
 
 .ScrollAreaScrollbar {
-  @apply z-50;
+  @apply z-40;
   display: flex;
   /* ensures no selection */
   user-select: none;
